--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="js/tonnetz.js" type="text/javascript"></script>
         <script src="js/makegui.js" type="text/javascript"></script>
         <script src="js/spirograph.js" type="text/javascript"></script>
+        <script src="js/spirograph3D.js" type="text/javascript"></script>
 
         <script src="js/MIDI/AudioDetect.js" type="text/javascript"></script>
         <script src="js/MIDI/LoadPlugin.js" type="text/javascript"></script>
@@ -128,6 +129,7 @@
             //const line = new THREE.Line( geometry, material );
             addTonnetz(scene);
             addSpirograph(scene,controls.floorColor);
+            addSpirograph3D(scene);
             AMSynth = newSynth();
             //console.log(keys_obj);
             let piano = newPiano(window.location.href);
@@ -214,7 +216,7 @@
             {
                 collada.scene.traverse(initialize_keys);
                 scene.add(collada.scene);
-                var skyGeo = new THREE.SphereGeometry(100, 25, 25); 
+                var skyGeo = new THREE.SphereGeometry(100, 25, 25);
                 var material = new THREE.MeshPhongMaterial({ color: 0xffffff});
                 var sky = new THREE.Mesh(skyGeo, material);
                 sky.material.side = THREE.BackSide;
@@ -258,7 +260,7 @@
                 releaseKeys();
             }
             window.onkeydown = function(ev)
-            {   
+            {
                 if (ev.keyCode == 9) {  //tab pressed
                     ev.preventDefault(); // stops its action
                 }
@@ -283,7 +285,7 @@
                     var note = keyCode_to_note(ev.keyCode);
                     key_status('_'+String(note), keyState.note_off);
                     keys_down[ev.keyCode] = false;
-                    
+
                 }
             }
 
@@ -332,6 +334,7 @@
                                     "Polonaise Ab major, Opus 53, Chopin": "chpn_op53.mid",
                                     "No. 2 - Oriental, Granados": "gra_esp_2.mid",
                                     "Bohemian Rhapsody, Queen": "bohemian1.mid",
+                                    "P 1": "P3.mid"
                                   };
                     makeGUI();
                 });
