Scale & Rotate Sliders

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                 this.gui;
                 this.visualize = 'tonnetz';
                 this.scale3D = 1;
+                this.rotateX = 0;
+                this.rotateY = 0;
+                this.rotateZ = 0;
                 this.orbit=false;
                 this.floorColor = 0xf0eff0;
                 this.sphereJump = 4;
