New midi and updated spiro z stuff

--- a/index.html
+++ b/index.html
@@ -375,7 +375,9 @@
                                     "Autumn Leaves w/ Bass": "Autumn_Leaves_Chords.mid",
                                     "Autumn Leaves": "AutumnLeavesChords.mid",
                                     "Aaron Beat Draft": "Final_Beat_Draft.mid",
-                                    "Aaron A Foggy Day": "Aaron_Foggy_Day.mid"
+                                    "Aaron A Foggy Day": "Aaron_Foggy_Day.mid",
+                                    "Stairway to Heaven, Led Zeppelin": "LEDZEPPELIN_Stairway_to_heaven_K.mid",
+                                    "Mr. Brightside, The Killers" : "Mr_Brightside.mid"
                                   };
                     makeGUI();
                     var tour = loadTour();
