--- a/index.html
+++ b/index.html
@@ -208,10 +208,12 @@
             init_lights();
             var loader = new ColladaLoader();
             loader.load( 'obj/piano.dae', prepare_scene );
-
-            camera.position.x = -3.77;
-            camera.position.z = 11.04;
-            camera.position.y = 6.51;
+            
+            camera.position.fromArray([-3.77, 11, 6.5]);
+            camera.position.addScaledVector(new THREE.Vector3(6,1,-4),-0.5);
+            // camera.position.x = -3.77;
+            // camera.position.z = 11.04;
+            // camera.position.y = 6.51;
 
             var cameraControls = new THREE.OrbitAndPanControls(camera, renderer.domElement);
             cameraControls.target.set(6, 1, -4);
