white animated spiro2d

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             }
             var whiteText = new THREE.MeshPhongMaterial( {color: 0xffffff} );
             var blackText = new THREE.MeshPhongMaterial( {color: 0x000000} );
+            const white = new THREE.Color(0xffffff);
             const black = new THREE.Color(0x000000);
             var up = new THREE.Vector3(0,1,0);
             //console.log(colors);
